[project]
name = "pipelines"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.35",
    "chromadb>=0.6.3",
    "ddtrace>=3.9.1",
    "fastapi==0.111.0",
    "google-generativeai>=0.8.5",
    "grpcio>=1.73.0",
    "httpx>=0.27.2",
    "langfuse>=3.0.1",
    "llama-index>=0.12.3",
    "llama-index-llms-ollama>=0.4.2",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "opencv-python>=4.11.0.86",
    "opik>=1.7.34",
    "pandas>=2.3.0",
    "passlib[bcrypt]==1.7.4",
    "peewee>=3.18.1",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.7.1",
    "pyjwt[crypto]>=2.10.1",
    "pymongo>=4.13.1",
    "python-multipart==0.0.9",
    "python-socketio>=5.13.0",
    "redis>=6.2.0",
    "requests==2.32.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn[standard]==0.22.0",
    "vertexai>=1.71.1",
    "xgboost>=3.0.2",
]
